--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body, html {
     text-align: center;
     padding: 0;
     margin: 0;
-    background: url(/tomlin.PNG) no-repeat center center fixed; 
+    background: url(tomlin.PNG) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -49,5 +49,5 @@ body, html {
 
 .sas {
     background-size: cover;
-    background-image: url(/sas.PNG);
+    background-image: url(sas.PNG);
 }
