--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,7 @@ body, html {
 
 .sas {
     background-size: cover;
-    background-image: url(/css/sas.PNG);
-    background-image: url(css/sas.PNG);
-    /* background-image: url(sas.PNG); */
-    /* background-image: url(/sas.PNG); */
+    background-image: url(sas.PNG);
 }
 
 
