--- a/css/style.css
+++ b/css/style.css
@@ -51,16 +51,25 @@ body, html {
 .sas {
     background-size: cover;
     background-image: url(sas.PNG);
+    background-position: center;
 }
 
 
 @media (max-width:1030px){
+
+    #fbtn {
+        line-height: .8em;
+        font-size: 200px;
+        z-index: 5;
+    }
 
     #cbtn {
         font-size: 40px;
         height: 150px;
         width:AUTO;
         padding: 10px;
+        left: 60px;
+        bottom: 60px;
     }
 
 
