--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ body, html {
 #cbtn {
     font-family: Helvetica, sans-serif;
     font-weight: bold;
-    background-color: rgb(255, 217, 0);
-    color: black;
+    color: rgb(255, 208, 0);
+    background-color: black;
     border: none;
     position: fixed;
     left:20px;
